# spartify

./: CMakeLists.txt  ReadMe.md
docs/: SparitfyPipeline.md
spartify/: CMakeLists.txt
spartify/includes/transforms/: Passes.td
spartify/tools/: CMakeLists.txt  spartify-opt.cpp  spartify-opt.h
spartify/transforms/: CMakeLists.txt  SpartifyConvertToSparse.cpp  SpartifyConvertToTransposedMatmulOp.cpp  SpartifyGenericConversion.cpp  SpartifyTileAndFuse.cpp  passes.cpp  passes.h  passes.td
test/: sparse_scf.mlir  spartify_net.mlir
